--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -54,10 +54,10 @@
            </a>
       
            
-           <a href="#">
-              <span class="material-symbols-sharp">logout </span>
-              <h3>logout</h3>
-           </a>
+           <a href="{{ url_for('logout') }}">
+            <span class="material-symbols-sharp">logout</span>
+            <h3>Logout</h3>
+        </a>
              
 
 
