--- a/templates/add_workers.html
+++ b/templates/add_workers.html
@@ -13,7 +13,7 @@
     <aside>
        <div class="top">
          <div class="logo">
-           <h2>C <span class="danger">Local Connect</span> </h2>
+           <h2> <span class="danger">Local Connect</span> </h2>
          </div>
          <div class="close" id="close_btn">
           <span class="material-symbols-sharp">
