popup for index

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,16 +62,21 @@
           createBanner(configObj, null);
         });
       </script>
+      <script>
+        function showMessage() {
+            alert('Please Login/Signup to access this feature!');
+        }
+    </script>
     
     <header>
         <nav>
             <div class="left">LocalConnect.</div>
             <div class="right">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#" onclick="showMessage()">Home</a></li>
+                    <li><a href="#" onclick="showMessage()">About Us</a></li>
                     <li><a href="contactus">Contact Us</a></li>
-                    <li><a href="#">Become a SP</a></li>
+                    <li><a href="#" onclick="showMessage()">Become a SP</a></li>
                     <li><a href="/login"><button class="btn">Login/Sign Up</button></a></li>
 
                 </ul>
@@ -89,7 +94,7 @@
 
                 <span id="element"></span>
                 <div class="buttons">
-                    <a href="#"><button class="btn">Services</button></a>
+                    <a href="#" onclick="showMessage()"><button class="btn">Services</button></a>
 
                 </div>
             </div>
