still working on merging

--- a/templates/add_workers.html
+++ b/templates/add_workers.html
@@ -86,6 +86,7 @@
             <select name="services" required>
               <option value="" disabled selected>Select Service</option>
               <option value="Pipe Installation and Repair">Pipe Installation and Repair</option>
+              <option value="Fixture Installation and Repair">Fixture Installation and Repair</option>
               <option value="Water Heater Installation and Repair">Water Heater Installation and Repair</option>
               <option value="Drain Cleaning">Drain Cleaning</option>
               <option value="Cabinet Installation and Repair">Cabinet Installation and Repair</option>
