--- a/templates/hi3.html
+++ b/templates/hi3.html
@@ -7,9 +7,9 @@
     <style>
         body {
             background-color: rgb(23, 167, 172);
-    color: white;
-    font-family: "Poppins", sans-serif;
-}
+            color: white;
+            font-family: "Poppins", sans-serif;
+        }
 
         header {
             background-color: rgb(6, 72, 75);
@@ -28,8 +28,6 @@
             justify-content: space-around;
             text-align: center;
             color: rgb(255, 255, 255);
-            
-        
         }
 
         .profile {
@@ -43,34 +41,24 @@
             width: 200px; /* Set your desired width */
             height: 200px; /* Set your desired height */
             object-fit: cover;
-            
+            border-radius: 50%; /* For rounded images */
         }
 
-   
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #06484b;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            font-size: 16px;
+        }
 
-    .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #06484b;
-        color: white;
-        text-decoration: none;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
-        font-size: 16px;
-    }
-
-    .btn:hover {
-        background-color: #4949cb;
-    }
-    .profile img {
-        width: 100px; /* Adjust as needed */
-        height: 100px; /* Adjust as needed */
-        object-fit: cover;
-        border-radius: 50%; /* For rounded images */
-    }
-</style>
-
-   
+        .btn:hover {
+            background-color: #4949cb;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -78,20 +66,16 @@
     </header>
 
     <div class="container">
-        {% for work in work %}
+        {% for worker in work1 %}
         <div class="profile">
             <img src="{{ url_for('static', filename='uploads/' + worker[7]) }}" alt="{{ worker[2] }}">
-            <h2>Name: {{ work[2] }}</h2>
-            <p>Email id : {{ work[3] }} </p>
-            <p>Worker id : {{ work[4] }}</p>
-            <p>Experience : {{ work[5] }} Years</p>
-            <a href="/booking"
-  class= "btn"
->Book Worker</a>
+            <h2>Name: {{ worker[2] }}</h2>
+            <p>Email id : {{ worker[3] }} </p>
+            <p>Worker id : {{ worker[4] }}</p>
+            <p>Experience : {{ worker[5] }} Years</p>
+            <a href="/booking" class="btn">Book Worker</a>
         </div>
         {% endfor %}
-
     </div>
-    
 </body>
 </html>
