--- a/templates/registered_wrokers.html
+++ b/templates/registered_wrokers.html
@@ -73,6 +73,7 @@
                     <h2>Name: {{ provider['name'] }}</h2>
                     <p>Email: {{ provider['email'] }}</p>
                     <p>Worker ID: {{ provider['worker_id'] }}</p>
+                    <p>Services: {{ provider['services'] }}</p>
                     <p>Experience: {{ provider['experience'] }} Years</p>
                     <p>Phone: {{ provider['number'] }}</p>
                     <p>Aadhar: {{ provider['addhar'] }}</p>
