--- a/templates/book.html
+++ b/templates/book.html
@@ -138,6 +138,16 @@
                 class="formbold-form-input"
               />
             </div>
+            <div  class="formbold-mb-5">
+              <label for="name" class="formbold-form-label"> service provider name </label>
+              <input
+                type="text"
+                name="service_provider_username"
+                id="service_provider_username"
+                placeholder="service_provider_username"
+                class="formbold-form-input"
+              />
+            </div>
             <div class="formbold-mb-5">
               <label for="phone" class="formbold-form-label"> Phone Number </label>
               <input
