--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,7 +39,7 @@
            </a>
            
           
-           <a href="/reg_workers">
+           <a href="{{url_for('reg_workers')}}">
               <span class="material-symbols-sharp">mail_outline </span>
               <h3>Registered worker's</h3>
            </a>
