--- a/templates/add_workers.html
+++ b/templates/add_workers.html
@@ -100,7 +100,12 @@
               <option value="Interior Painting">Interior Painting</option>
               <option value="Exterior Painting">Exterior Painting</option>
               <option value="Cabinet Painting/Refinishing">Cabinet Painting/Refinishing</option>
-              <option value="Carpentry">Carpentry</option>
+              <option value="Deck and Fence Staining/Painting">Deck and Fence Staining/Painting</option>
+              <option value="Routine Maintenance">Routine Maintenance</option>
+              <option value="Diagnostic Services">Diagnostic Services</option>
+              <option value="Repairs">Repairs</option>
+              <option value="Tire Services">Tire Services</option>
+              
               <!-- Add more options as needed -->
           </select>
             <input type="number" name="experience" placeholder="Experience" required>
