--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title> Contact us||Local connect</title>
+    <link rel="shortcut icon" href="static/images/icon2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="{{url_for('static', filename='css/cu.css')}}">
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
