--- a/templates/registerform.html
+++ b/templates/registerform.html
@@ -4,6 +4,7 @@
     <title>
         Local Connect
     </title>
+    <link rel="shortcut icon" href="static/images/icon2.jpg" type="image/x-icon">
 </head>
     
   <meta charset="UTF-8">
