--- a/templates/add_workers.html
+++ b/templates/add_workers.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Worker</title>
+    <link rel="shortcut icon" href="static/images/icon2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/dashboard.css')}}">
+    <style>
+      .aw {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 10vh;
+        background-color: rgb(23, 167, 172);
+      }
+    </style>
 </head>
 <body>
 
@@ -42,6 +53,10 @@
             <h3>Messages</h3>
             <span class="msg_count">14</span>
          </a>
+         <a href="{{url_for('reg_workers')}}">
+          <span class="material-symbols-sharp">mail_outline </span>
+          <h3>Registered worker's</h3>
+       </a>
 
          <a href="#">
             <span class="material-symbols-sharp">report_gmailerrorred </span>
@@ -75,7 +90,7 @@
 
 
 
-        <h1>Add Worker</h1>
+        <h1 class="aw">Add Worker</h1>
         <form action="/add_worker/{{session['provider_id']}}" method="post" enctype="multipart/form-data">
 
             <input type="text" name="name" placeholder="Name" required>
