--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Service Provider Profile</title>
+    <link rel="shortcut icon" href="static/images/icon2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" />
     <style>
         body {
