--- a/templates/services.html
+++ b/templates/services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
     <title>Service Provider Page</title>
+    <link rel="shortcut icon" href="static/images/icon2.jpg" type="image/x-icon">
     <style>
         body {
             
