--- a/templates/tire.html
+++ b/templates/tire.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service Providers</title>
+    
+    <link rel="shortcut icon" href="static/images/icon2.jpg" type="image/x-icon">
     <style>
         body {
             background-color: rgb(23, 167, 172);
