--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LocalConnect</title>
+    <link rel="shortcut icon" href="static/images/icon2.jpg" type="image/x-icon">    
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/userpage.css')}}">
