--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -150,17 +150,22 @@
          </tr>
       </thead>
       <tbody>
-         {% for booking in bookings %}
-         <tr>
-            <td>{{ booking[2] }}</td>
-            <td>{{ booking[3] }}</td>
-            <td>{{ booking[4] }}</td>
-            <td>{{ booking[6] }}</td>
-            <td>{{ booking[7] }}</td>
-            <td>{{ booking[8] }}</td>
-            <td><button class="acc">Accept</button> <button class="dec">Decline</button></td>
-         </tr>
-         {% endfor %}
+        {% for booking in bookings %}
+        <tr>
+          <td>{{ booking[2] }}</td>
+          <td>{{ booking[3] }}</td>
+          <td>{{ booking[4] }}</td>
+          <td>{{ booking[6] }}</td>
+          <td>{{ booking[7] }}</td>
+          <td>{{ booking[8] }}</td>
+          <td>
+            <form action="{{ url_for('decline_booking') }}" method="post">
+              <input type="hidden" name="booking_id" value="{{ booking[0] }}">
+              <button type="submit" class="dec">Decline</button><button class="acc">ACCEPT</button>
+            </form>
+          </td>
+        </tr>
+        {% endfor %}
       </tbody>
   </table>
   <a href="#">Show All</a>
