--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ cabinet[2] }}</h2>
             <p>Email id : {{ cabinet[3] }} </p>
             <p>Worker id : {{ cabinet[4] }}</p>
+            <p>provider name : {{ cabinet[10] }}</p>
             <p>Experience : {{ cabinet[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
