--- a/templates/circuit.html
+++ b/templates/circuit.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ circuit[2] }}</h2>
             <p>Email id : {{ circuit[3] }} </p>
             <p>Worker id : {{ circuit[4] }}</p>
+            <p>provider name : {{ circuit[10] }}</p>
             <p>Experience : {{ circuit[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
