--- a/templates/deck.html
+++ b/templates/deck.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ deck[2] }}</h2>
             <p>Email id : {{ deck[3] }} </p>
             <p>Worker id : {{ deck[4] }}</p>
+            <p>provider name : {{ deck[10] }}</p>
             <p>Experience : {{ deck[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
