--- a/templates/diagnostic.html
+++ b/templates/diagnostic.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ diagnostic[2] }}</h2>
             <p>Email id : {{ diagnostic[3] }} </p>
             <p>Worker id : {{ diagnostic[4] }}</p>
+            <p>provider name : {{ diagnostic[10] }}</p>
             <p>Experience : {{ diagnostic[5] }} Years</p>
             <a href="/booking"
   class= "btn"
