--- a/templates/door.html
+++ b/templates/door.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ door[2] }}</h2>
             <p>Email id : {{ door[3] }} </p>
             <p>Worker id : {{ door[4] }}</p>
+            <p>provider name : {{ door[10] }}</p>
             <p>Experience : {{ door[5] }} Years</p>
             <<a href="/booking"
             class= "btn"
