--- a/templates/electrical.html
+++ b/templates/electrical.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ electrical[2] }}</h2>
             <p>Email id : {{ electrical[3] }} </p>
             <p>Worker id : {{ electrical[4] }}</p>
+            <p>provider name : {{ electrical[10] }}</p>
             <p>Experience : {{ electrical[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
