--- a/templates/exterior.html
+++ b/templates/exterior.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ exterior[2] }}</h2>
             <p>Email id : {{ exterior[3] }} </p>
             <p>Worker id : {{ exterior[4] }}</p>
+            <p>provider name : {{ exterior[10] }}</p>
             <p>Experience : {{ exterior[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
