--- a/templates/hi.html
+++ b/templates/hi.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ workers[2] }}</h2>
             <p>Email id : {{ workers[3] }} </p>
             <p>Worker id : {{ workers[4] }}</p>
+            <p>provider name : {{ workers[10] }}</p>
             <p>Experience : {{ workers[5] }} Years</p>
             <a href="/booking"
   class= "btn"
