--- a/templates/hi2.html
+++ b/templates/hi2.html
@@ -73,6 +73,7 @@
             <h2>Name: {{ worker[2] }}</h2>
             <p>Email id : {{ worker[3] }} </p>
             <p>Worker id : {{ worker[4] }}</p>
+            <p>provider name : {{ workers[10] }}</p>
             <p>Experience : {{ worker[5] }} Years</p>
             <a href="/booking" class="btn">Book Worker</a>
         </div>
