--- a/templates/interior.html
+++ b/templates/interior.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ interior[2] }}</h2>
             <p>Email id : {{ interior[3] }} </p>
             <p>Worker id : {{ interior[4] }}</p>
+            <p>provider name : {{ interior[10] }}</p>
             <p>Experience : {{ interior[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
