--- a/templates/lighting.html
+++ b/templates/lighting.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ lighting[2] }}</h2>
             <p>Email id : {{ lighting[3] }} </p>
             <p>Worker id : {{ lighting[4] }}</p>
+            <p>provider name : {{ lighting[10] }}</p>
             <p>Experience : {{ lighting[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
