--- a/templates/outlet.html
+++ b/templates/outlet.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ outlet[2] }}</h2>
             <p>Email id : {{ outlet[3] }} </p>
             <p>Worker id : {{ outlet[4] }}</p>
+            <p>provider name : {{ outlet[10] }}</p>
             <p>Experience : {{ outlet[5] }} Years</p>
             <a href="/workerprofile"
   class= "btn"
