--- a/templates/routine.html
+++ b/templates/routine.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ routine[2] }}</h2>
             <p>Email id : {{ routine[3] }} </p>
             <p>Worker id : {{ routine[4] }}</p>
+            <p>provider name : {{ routine[10] }}</p>
             <p>Experience : {{ routine[5] }} Years</p>
             <a href="/booking"
   class= "btn"
