--- a/templates/tire.html
+++ b/templates/tire.html
@@ -86,10 +86,9 @@
             <h2>Name: {{ tire[2] }}</h2>
             <p>Email id : {{ tire[3] }} </p>
             <p>Worker id : {{ tire[4] }}</p>
+            <p>provider name : {{ tire[10] }}</p>
             <p>Experience : {{ tire[5] }} Years</p>
-            <a href="/booking"
-            class= "btn"
-          >Book Worker</a>
+            <a href="/booking" class= "btn">Book Worker</a>
 
         </div>
         {% endfor %}
