--- a/templates/trim.html
+++ b/templates/trim.html
@@ -85,10 +85,9 @@
             <h2>Name: {{ trim[2] }}</h2>
             <p>Email id : {{ trim[3] }} </p>
             <p>Worker id : {{ trim[4] }}</p>
+            <p>provider name : {{ trim[10] }}</p>
             <p>Experience : {{ trim[5] }} Years</p>
-            <a href="/booking"
-  class= "btn"
->Book Worker</a>
+            <a href="/booking" class= "btn">Book Worker</a>
 
         </div>
         {% endfor %}
