--- a/templates/furniture.html
+++ b/templates/furniture.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ furniture[2] }}</h2>
             <p>Email id : {{ furniture[3] }} </p>
             <p>Worker id : {{ furniture[4] }}</p>
+            <p>provider name : {{ furniture[10] }}</p>
             <p>Experience : {{ furniture[5] }} Years</p>
             <a href="/booking"
             class= "btn"
