--- a/templates/refinishing.html
+++ b/templates/refinishing.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ refinishing[2] }}</h2>
             <p>Email id : {{ refinishing[3] }} </p>
             <p>Worker id : {{ refinishing[4] }}</p>
+            <p>provider name : {{ refinishing[10] }}</p>
             <p>Experience : {{ refinishing[5] }} Years</p>
             <a href="/booking"
             class= "btn"
