--- a/templates/repairs.html
+++ b/templates/repairs.html
@@ -85,6 +85,7 @@
             <h2>Name: {{ repairs[2] }}</h2>
             <p>Email id : {{ repairs[3] }} </p>
             <p>Worker id : {{ repairs[4] }}</p>
+            <p>provider name : {{ repairs[10] }}</p>
             <p>Experience : {{ repairs[5] }} Years</p>
             <a href="/booking"
   class= "btn"
